--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!-- Dark Mode Toggle -->
   <input type="checkbox" id="dark-mode-toggle" hidden />
   <label for="dark-mode-toggle" class="toggle-btn">
-  <img src="C:\Users\Acer\Desktop\HTML\dark.png" alt="Dark Mode" style="width: 30px; height: 20px; margin-bottom: -15%;" />
+  <img src="dark.png" alt="Dark Mode" style="width: 30px; height: 20px; margin-bottom: -15%;" />
   </label>
 
 
@@ -37,7 +37,7 @@
     <section id="home" class="section">
       <div class="homecontainer">
         <div class="home-image">
-          <img src="C:\Users\Acer\Desktop\HTML\josh1.png" alt="Image" />
+          <img src="josh1.png" alt="Image" />
         </div>
         <div class="home-text">
           <h1>Hello, I’m Joshua!</h1>
@@ -52,11 +52,11 @@
         <div class="res-text">
            <h2>About</h2>
           <p><b>Developed Hicky Restaurant Project.</b></p>
-          <img src="C:\Users\Acer\Desktop\HTML\web.png" alt="Restaurant" />
+          <img src="web.png" alt="Restaurant" />
        </div>
         <div class="dev-text">
           <p><b>Attended Dev Fest Butuan!</b></p>
-          <img src="C:\Users\Acer\Desktop\HTML\dev.png" alt="Dev Fest Image" />
+          <img src="dev.png" alt="Dev Fest Image" />
         </div>
       </div>
     </section>
