--- a/index.html
+++ b/index.html
@@ -8,32 +8,28 @@
 </head>
 <body>
 
-  <!-- Dark Mode Toggle -->
-  <input type="checkbox" id="dark-mode-toggle" hidden />
-  <label for="dark-mode-toggle" class="toggle-btn">
-  <img src="dark.png" alt="Dark Mode" style="width: 30px; height: 20px; margin-bottom: -15%;" />
+  <input type = "checkbox" id="dark-mode-toggle" hidden />
+  <label for = "dark-mode-toggle" class="toggle-btn">
+  <img src = "dark.png" alt="Dark Mode" style="width: 30px; height: 20px; margin-bottom: -15%;" />
   </label>
 
-
-  <!-- Page content wrapper for theme switching -->
-  <div class="page">
-
+  <div class = "page">
     <header>
       <nav>
-        <div class="nav-left">
+        <div class = "nav-left">
           <ul>
-            <li><a href="#home">Home</a></li>
+            <li><a href = "#home">Home</a></li>
           </ul>
         </div>
         <div class="nav-right">
           <ul>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href = "#about">About</a></li>
+            <li><a href = "#contact">Contact</a></li>
           </ul>
         </div>
       </nav>
     </header>
-
+    
     <section id="home" class="section">
       <div class="homecontainer">
         <div class="home-image">
@@ -46,7 +42,6 @@
       </div>
     </section>
 
-    <!-- About Section -->
     <section id="about" class="aboutsection">
       <div class="aboutcontainer">
         <div class="res-text">
@@ -54,28 +49,25 @@
           <p><b>Developed Hicky Restaurant Project.</b></p>
           <img src="web.png" alt="Restaurant" />
        </div>
-        <div class="dev-text">
+        <div class = "dev-text">
           <p><b>Attended Dev Fest Butuan!</b></p>
-          <img src="dev.png" alt="Dev Fest Image" />
+          <img src="dev.png" alt = "Dev Fest Image" />
         </div>
       </div>
     </section>
 
-    <!-- Contact Section -->
-    <section id="contact" class="section">
-      <div class="container">
+    <section id = "contact" class="section">
+      <div class = "container">
         <h2>Contact</h2>
         <p>Email me: joshuamuyacoco@gmail.com.</p>
         <p>Phone: 09396458666.</p>
       </div>
     </section>
 
-    <!-- Footer -->
     <footer>
-      <p>&copy; 2025 @Josh</p>
+      <p> &copy; 2025 @Josh </p>
     </footer>
 
-  </div> <!-- End of .page -->
-
+  </div>
 </body>
 </html>
