--- a/bash/index.html
+++ b/bash/index.html
@@ -9,7 +9,7 @@
 
 <body>
   <button id="dark-mode-toggle" class="toggle-btn">
-    <img src="images/dark.png" alt="Dark Mode" style="width: 30px; height: 20px; margin-bottom: -15%;" />
+    <img src="dark.png" alt="Dark Mode" style="width: 30px; height: 20px; margin-bottom: -15%;" />
   </button>
 
   <div class="page">
@@ -32,7 +32,7 @@
     <section id="home" class="section">
       <div class="homecontainer">
         <div class="home-image">
-          <img src="images/josh1.png" alt="Image" />
+          <img src="josh1.png" alt="Image" />
         </div>
         <div class="home-text">
           <h1>Hello, I’m Joshua!</h1>
@@ -46,10 +46,10 @@
         <h1 class="about-title">About</h1>
         <div class="about-images">
           <div class="res-text">
-            <img src="images/web.png" alt="Restaurant Project">
+            <img src="web.png" alt="Restaurant Project">
           </div>
           <div class="dev-text">
-            <img src="images/dev.png" alt="DevFest Butuan">
+            <img src="dev.png" alt="DevFest Butuan">
           </div>
         </div>
 
@@ -109,3 +109,4 @@
   </script>
 </body>
 </html>
+
