--- a/index.html
+++ b/index.html
@@ -65,6 +65,15 @@
       </div>
     </section>
 
+    <section id="skills" class="skills section">
+      <div class="skillscontainer">
+        <h1 class="skills-title">Skills</h1>
+        <p id="skills-text">HTML, CSS, JavaScript, React, Node.js, Express, MongoDB, Cyber Security basics.
+        </p>
+        <button class="edit-btn" onclick="toggleEdit('skills-text', this)">Edit</button>
+      </div>
+    </section>
+
     <section id="contact" class="section">
       <div class="container">
         <h2>Contact</h2>
