--- a/index.html
+++ b/index.html
@@ -77,11 +77,11 @@
         <div class="skillscontainer">
           <h1 class="skills-title">Skills</h1>
           <ul id="skills-list">
-            <li>HTML5</li>
-            <li>CSS3</li>
-            <li>JavaScript</li>
-            <li>React</li>
-            <li>Node.js</li>
+            <li contenteditable="false">HTML5</li>
+            <li contenteditable="false">CSS3</li>
+            <li contenteditable="false">JavaScript</li>
+            <li contenteditable="false">React</li>
+            <li contenteditable="false">Node.js</li>
           </ul>
           <button class="edit-btn" data-target="skills-list">Edit</button>
         </div>
@@ -102,7 +102,7 @@
         <a href="https://github.com/dogiemart" target="_blank">GitHub</a>
         <a href="https://www.linkedin.com" target="_blank">LinkedIn</a>
       </div>
-      <a href="#home" class="back-to-top">Back to Top</a>
+      <a href="#home" class="back-to-top">↑ Back to Top</a>
     </footer>
   </div>
 
