--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
   <title>J.Co</title>
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&family=Montserrat:wght@600;800&display=swap" rel="stylesheet">
-</head> 
-
+</head>
 <body>
   <button id="dark-mode-toggle" class="toggle-btn" aria-label="Toggle dark mode">
     <img id="dark-mode-icon" src="dark.png" alt="Dark Mode" />
@@ -50,7 +49,7 @@
         </div>
       </section>
 
-      <section id="about" class="about">
+      <section id="about" class="section">
         <div class="aboutcontainer">
           <h1 class="about-title">About</h1>
           <div class="about-images">
@@ -73,7 +72,7 @@
         </div>
       </section>
 
-      <section id="skills" class="skills">
+      <section id="skills" class="section">
         <div class="skillscontainer">
           <h1 class="skills-title">Skills</h1>
           <ul id="skills-list">
