--- a/index.html
+++ b/index.html
@@ -6,31 +6,32 @@
   <title>J.Co</title>
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&family=Montserrat:wght@600;800&display=swap" rel="stylesheet">
-</head>
+</head> 
+
 <body>
   <button id="dark-mode-toggle" class="toggle-btn" aria-label="Toggle dark mode">
     <img id="dark-mode-icon" src="dark.png" alt="Dark Mode" />
   </button>
 
   <div class="page">
-    <header role="banner">
-      <nav role="navigation">
+    <header>
+      <nav>
         <div class="nav-left">
           <ul>
-            <li><a href="#home">Home</a></li>
+            <li><a href="#home" class="nav-link">Home</a></li>
           </ul>
         </div>
         <div class="nav-right">
           <ul>
-            <li><a href="#about">About</a></li>
-            <li><a href="#skills">Skills</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="#about" class="nav-link">About</a></li>
+            <li><a href="#skills" class="nav-link">Skills</a></li>
+            <li><a href="#contact" class="nav-link">Contact</a></li>
           </ul>
         </div>
       </nav>
     </header>
 
-    <main role="main">
+    <main>
       <section id="home" class="section">
         <div class="homecontainer">
           <div class="home-image">
@@ -89,13 +90,13 @@
       <section id="contact" class="section">
         <div class="container">
           <h2>Contact</h2>
-          <p>Email me: joshuamuyacoco@gmail.com.</p>
-          <p>Phone: 09396458666.</p>
+          <p>Email me: joshuamuyacoco@gmail.com</p>
+          <p>Phone: 09396458666</p>
         </div>
       </section>
     </main>
 
-    <footer role="contentinfo">
+    <footer>
       <p>&copy; 2025 @Josh</p>
       <div class="social-links">
         <a href="https://github.com/dogiemart" target="_blank">GitHub</a>
