--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&family=Montserrat:wght@600;800&display=swap" rel="stylesheet">
 </head> 
-
 <body>
   <button id="dark-mode-toggle" class="toggle-btn" aria-label="Toggle dark mode">
     <img id="dark-mode-icon" src="dark.png" alt="Dark Mode" />
@@ -77,11 +76,11 @@
         <div class="skillscontainer">
           <h1 class="skills-title">Skills</h1>
           <ul id="skills-list">
-            <li contenteditable="false">HTML5</li>
-            <li contenteditable="false">CSS3</li>
-            <li contenteditable="false">JavaScript</li>
-            <li contenteditable="false">React</li>
-            <li contenteditable="false">Node.js</li>
+            <li>HTML5</li>
+            <li>CSS3</li>
+            <li>JavaScript</li>
+            <li>React</li>
+            <li>Node.js</li>
           </ul>
           <button class="edit-btn" data-target="skills-list">Edit</button>
         </div>
