--- a/index.html
+++ b/index.html
@@ -53,11 +53,13 @@
         <div class="aboutcontainer">
           <h1 class="about-title">About</h1>
           <div class="about-images">
-            <div class="res-text">
+            <div class="about-card">
               <img src="web.png" alt="Restaurant Project">
+              <p class="about-desc">A responsive restaurant website project I built using modern web technologies.</p>
             </div>
-            <div class="dev-text">
+            <div class="about-card">
               <img src="dev.png" alt="DevFest Butuan">
+              <p class="about-desc">Volunteered and contributed to DevFest Butuan, focusing on community-driven tech solutions.</p>
             </div>
           </div>
           <div class="summary">
@@ -71,6 +73,7 @@
           </div>
         </div>
       </section>
+
 
       <section id="skills" class="section">
         <div class="skillscontainer">
